PostGIS 3.5.3
2025/xx/xx

To take advantage of all postgis_sfcgal extension features SFCGAL 1.5+ is needed.
PostgreSQL 12-18 required. GEOS 3.8+ required. Proj 6.1+ required.

* Bug fixes *

PostGIS 3.5.2
2025/01/18

To take advantage of all postgis_sfcgal extension features SFCGAL 1.5+ is needed.
PostgreSQL 12-17 required. GEOS 3.8+ required. Proj 6.1+ required.

* Bug fixes *

- #5677, Retain SRID during unary union (Paul Ramsey)
- #5833, pg_upgrade fix for postgis_sfcgal (Regina Obe)
- #5564, BRIN crash fix and support for parallel in PG17+
         (Paul Ramsey, Regina Obe)


PostGIS 3.5.1
2024/12/22

To take advantage of all postgis_sfcgal extension features SFCGAL 1.5+ is needed.
PostgreSQL 12-17 required. GEOS 3.8+ required. Proj 6.1+ required.

* Bug fixes *

- #5792, [topology] Prevent topology corruption with TopoGeo_addPoint near almost
         collinear edges (Sandro Santilli)
- #5795, [topology] Fix ST_NewEdgesSplit can cause invalid topology
         (Björn Harrtell)
- #5794, Fix crash in TopoGeo_addPoint (Sandro Santilli)
- #5785, [raster] ST_MapAlgebra segfaults when expression references
         a supernumerary rast argument (Dian M Fay)
- #5787, [topology] Check that ST_ChangeEdgeGeom doesn't change winding of rings
         (Sandro Santilli)
- #5791, Add legacy stubs for old transaction functions
         to allow pg_upgrade (Regina Obe)
- #5800, PROJ compiled version reading the wrong minor and micro
         (Regina Obe)
- #5790, Non-schema qualified calls causing issue with
         materialized views (Regina Obe)
- #5812, Performance regression in ST_Within (Paul Ramsey)
- #5815, Remove hash/merge promise from <> operator (Paul Ramsey)
- #5823, Build support for Pg18 (Paul Ramsey)

* Enhancements *

  - #5782, Improve robustness of min distance calculation (Sandro Santilli)
  - [topology] Speedup topology building when closing large rings with many
    holes (Björn Harrtell)